Making run_post return json instead of file
