# config/swagger.yml
@@ -47,39 +47,9 @@ paths:
         '405':
           description: Validation exception
   /run:
-    get:
-      summary: run get
-      description: run get
-      operationId: controllers.controllers.run
-      parameters:
-        - name: username
-          in: query
-          required: true
-          schema:
-            type: string
-            default: vatsaaa
-            description: run get
-      tags:
-        - run get
-      responses:
-        '200':
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                type: string
-            application/xml:
-              schema:
-                type: string
-        '400':
-          description: Invalid ID supplied
-        '404':
-          description: Not found
-        '405':
-          description: Validation exception
     post:
       tags:
-        - run post
+        - run
       summary: Search and get data
       description: Search and get data
       operationId: controllers.controllers.run_post
